// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListPage renders correctly 1`] = `
<Page
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Add Suppressions",
      "to": "/lists/suppressions/create",
    }
  }
  title="Suppressions"
>
  <Panel.LEGACY
    className="FilterPanel"
    mb="0"
  >
    <TabsWrapper>
      <Tabs
        connectBelow={true}
        selected={0}
        tabs={
          Array [
            Object {
              "content": "Filters",
              "onClick": [Function],
            },
            Object {
              "content": "Find by Email",
              "onClick": [Function],
            },
          ]
        }
      />
    </TabsWrapper>
    <Panel.LEGACY.Section>
      <Connect(ReduxForm) />
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
  <Connect(Results)
    subaccounts={Array []}
  />
</Page>
`;

exports[`ListPage renders correctly with subaccounts 1`] = `
<Page
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Add Suppressions",
      "to": "/lists/suppressions/create",
    }
  }
  title="Suppressions"
>
  <Panel.LEGACY
    className="FilterPanel"
    mb="0"
  >
    <TabsWrapper>
      <Tabs
        connectBelow={true}
        selected={0}
        tabs={
          Array [
            Object {
              "content": "Filters",
              "onClick": [Function],
            },
            Object {
              "content": "Find by Email",
              "onClick": [Function],
            },
          ]
        }
      />
    </TabsWrapper>
    <Panel.LEGACY.Section>
      <Connect(ReduxForm) />
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
  <Connect(Results)
    hasSubaccounts={true}
    subaccounts={Array []}
  />
</Page>
`;

exports[`ListPage renders filter by email tab correctly when selected 1`] = `
<Page
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Add Suppressions",
      "to": "/lists/suppressions/create",
    }
  }
  title="Suppressions"
>
  <Panel.LEGACY
    className="FilterPanel"
    mb="0"
  >
    <TabsWrapper>
      <Tabs
        connectBelow={true}
        selected={1}
        tabs={
          Array [
            Object {
              "content": "Filters",
              "onClick": [Function],
            },
            Object {
              "content": "Find by Email",
              "onClick": [Function],
            },
          ]
        }
      />
    </TabsWrapper>
    <Panel.LEGACY.Section>
      <Connect(ReduxForm)
        onSubmit={[MockFunction]}
      />
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
  <Connect(Results)
    subaccounts={Array []}
  />
</Page>
`;
